<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.CreateProfile">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_profile_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/progress_bar"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/user_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/user_image"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_account_circle_24" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/baseline_autorenew"
        android:background="@color/white"
        android:layout_toEndOf="@+id/user_img"
        android:layout_below="@+id/user_img"
        android:layout_marginStart="-35dp"
        android:layout_marginTop="-40dp"
        android:id="@+id/img_picker"
        android:contentDescription="@string/user_image" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_img"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/last_name"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_username"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/txt_bg"
        android:hint="@string/john"
        android:textColor="@color/black"
        android:textColorHint="#9F9F9F" />

    <TextView
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/gender"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gender_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_gender"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="#757575">

        <AutoCompleteTextView
            android:id="@+id/gender"
            style="@style/CustomAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gender_layout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/contact"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_tel"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/txt_bg"
        android:hint="@string/_054_665_1113"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textColorHint="#9F9F9F" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_profile_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tel"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/create_profile"
        android:textColor="@color/white"
        app:backgroundTint="@color/primary_black"
        app:cornerRadius="10dp" />

</RelativeLayout>