<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.SignUp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            android:src="@drawable/applogo" />

        <TextView
            android:id="@+id/create_account_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:text="@string/create_an_account"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_account_txt"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="7dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_txt"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/txt_bg"
            android:hint="@string/example_gmail_com"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHighlight="#757575" />

<!--        <TextView-->
<!--            android:id="@+id/role_txt"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@+id/email"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:layout_marginTop="15dp"-->
<!--            android:layout_marginBottom="7dp"-->
<!--            android:text="@string/role"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="15sp" />-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            android:id="@+id/role_layout"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_below="@+id/role_txt"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:layout_marginTop="7dp"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"-->
<!--            android:textColorHint="#757575">-->

<!--            <AutoCompleteTextView-->
<!--                android:id="@+id/role"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:inputType="none"-->
<!--                style="@style/CustomAutoCompleteTextView"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="18sp" />-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <TextView
            android:id="@+id/password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="7dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_txt"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="password"
            android:background="@drawable/txt_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHighlight="#757575" />

        <TextView
            android:id="@+id/c_password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="7dp"
            android:text="@string/confirm_password"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/c_password"
            style="@style/ThemeOverlay.Material3.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/c_password_txt"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="password"
            android:background="@drawable/txt_bg"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHighlight="#757575" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/c_password"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white"
            android:text="@string/create_account"
            app:backgroundTint="@color/primary_black"
            app:cornerRadius="10dp" />

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:layout_marginBottom="30dp"
            android:textColor="#536DFE"
            android:textSize="18sp" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:id="@+id/progress_bar"/>

    </RelativeLayout>

</ScrollView>